[gd_scene load_steps=10 format=2]

[ext_resource path="res://GameAssets/extra/008.png" type="Texture" id=1]
[ext_resource path="res://GameObjects/Skeleton.gd" type="Script" id=2]
[ext_resource path="res://GameAssets/extra/012.png" type="Texture" id=3]
[ext_resource path="res://GameAssets/extra/011.png" type="Texture" id=4]
[ext_resource path="res://GameAssets/extra/010.png" type="Texture" id=5]
[ext_resource path="res://GameAssets/extra/009.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 7 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 7.5 )

[node name="Skeleton" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Walk"
frame = 3

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
